--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </canvas>
         <p class="phrase">Enter your username to get your egg!</p>
         <a id="download" download="egg.png">
-            <input id="dl" type="button" value="Download" onclick="download()">
+            <input type="button" value="Download" onclick="download()">
         </a>
     </div>
 </body>
