--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Eggmoji!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="lib/seedrandom.min.js"></script>
     <script type="text/javascript" src="templates/meta.js"></script>
     <script type="text/javascript" src="extentions.js"></script>
     <script type="text/javascript" src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="input" align="center">
-        <span class="at">@</span>
-        <input type="text" id="name" placeholder="username">
-        <input type="button" value="Confirm" id="confirm" onclick="process()">
+      <span class="at">@</span>
+      <input type="text" id="name" placeholder="username" />
+      <input type="button" value="Confirm" id="confirm" onclick="process()" />
     </div>
     <div class="container" align="center">
-        <canvas id="egg" height="512" width="512">
-            Canvas is not supported in your browser!
-        </canvas>
-        <p class="phrase">Enter your username to get your egg!</p>
-        <a id="download" download="egg.png">
-            <input type="button" value="Download" onclick="download()">
-        </a>
+      <canvas id="egg" height="512" width="512">
+        Canvas is not supported in your browser!
+      </canvas>
+      <p class="phrase">Enter your username to get your egg!</p>
+      <a id="download" download="egg.png">
+        <input type="button" value="Download" onclick="download()" />
+      </a>
     </div>
-</body>
+  </body>
 </html>
