Fix small issue and experiment with auto updating

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="input" align="center">
       <span class="at">@</span>
-      <input type="text" id="name" placeholder="username" />
+      <input type="text" id="name" placeholder="username" oninput="process()" />
       <input type="button" value="Confirm" id="confirm" onclick="process()" />
     </div>
     <div class="container" align="center">
