--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="input" align="center">
       <span class="at">@</span>
-      <input type="text" id="name" placeholder="username" oninput="process()" />
+      <input type="text" id="name" placeholder="username" />
       <input type="button" value="Confirm" id="confirm" onclick="process()" />
     </div>
     <div class="container" align="center">
@@ -23,6 +23,7 @@
       <a id="download" download="egg.png">
         <input type="button" value="Download" onclick="download()" />
       </a>
+      <input id="update" type="button" value="Update" onclick="toggleAutoUpdate()" /> 
     </div>
   </body>
 </html>
