Process once on load and fix input filter css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="extentions.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </head>
-  <body>
+  <body onload="process()">
     <div class="input" align="center">
       <span class="at">@</span>
       <input type="text" id="name" placeholder="username" />
