--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="templates/meta.js"></script>
     <script type="text/javascript" src="extentions.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body onload="process()">
     <div class="input" align="center">
