--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div class="input" align="center">
       <span class="at">@</span>
       <!-- This prevents a space from being created between these elements. -->
-      <input type="text" id="name" placeholder="username" /><input
-        type="button" value="Confirm" id="confirm" onclick="process()"
-      />
+      <input type="text" id="name" placeholder="username" 
+        onkeydown="if (event.keyCode === 13) process();"
+      /><input type="button" value="Confirm" id="confirm" 
+        onclick="process()"/>
     </div>
     <div class="container" align="center">
       <canvas id="egg" height="512" width="512">
